<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/text"
        android:text="Thông tin Hoạt động"
        android:textColor="@color/colorBack"
        android:textSize="@dimen/sp_18"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"/>
    <TextView
        android:id="@+id/textNameAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nameAction"
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/titleDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameAction" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:text="@string/textDecription"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/titleStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/titleTimeStart"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/titleEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/timeStartAction"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/titleTimeEnd"
        app:layout_constraintEnd_toStartOf="@+id/timeEndAction"
        tools:layout_editor_absoluteY="134dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/titleCreator"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textDescription" />

    <TextView
        android:id="@+id/nameCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameCreator"
        android:textColor="@color/colorBack"
        app:layout_constraintStart_toStartOf="@+id/textDescription"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/timeStartAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeStart"
        android:textColor="@color/colorBack"
        app:layout_constraintStart_toStartOf="@+id/nameCreator"
        app:layout_constraintTop_toTopOf="@+id/titleStart" />

    <TextView
        android:id="@+id/timeEndAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/titleEnd"
        android:text="@string/timeStart"
        android:layout_marginRight="@dimen/dp_16"
        android:textColor="@color/colorBack"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="134dp" />
</androidx.constraintlayout.widget.ConstraintLayout>