<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_8">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemActionSmall"
        android:layout_marginBottom="@dimen/dp_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageAvatarMember"
                android:layout_width="@dimen/sizeImageAvartar"
                android:layout_height="@dimen/sizeImageAvartar"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:src="@drawable/bavarian"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginLeft="@dimen/dp_24"
                android:text="@string/nameCreator"
                android:textSize="@dimen/sp_24"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageAvatarMember"
                app:layout_constraintTop_toTopOf="@+id/imageAvatarMember" />

            <TextView
                android:id="@+id/textNameAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/textPart"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold|italic"
                app:layout_constraintLeft_toRightOf="@+id/imageAvatarMember"
                app:layout_constraintTop_toBottomOf="@id/nameMember" />

            <TextView
                android:id="@+id/titleTimeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginItemWork"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/marginTopAction"
                android:layout_marginBottom="@dimen/dp_8"
                android:fontFamily="@font/allerta"
                android:text="@string/titleTimeStart"
                android:textSize="@dimen/textSizeTime"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textNameAction"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/timeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/allerta"
                android:text="@string/timeStart"
                android:textSize="@dimen/textSizeTime"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/titleTimeStart"
                app:layout_constraintTop_toTopOf="@id/titleTimeStart" />

            <TextView
                android:id="@+id/timeEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:text="@string/timeStart"
                android:textSize="@dimen/textSizeTime"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleTimeEnd" />

            <TextView
                android:id="@+id/titleTimeEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:fontFamily="@font/allerta"
                android:text="@string/titleTimeEnd"
                android:textSize="@dimen/textSizeTime"
                app:layout_constraintEnd_toStartOf="@+id/timeEnd"
                app:layout_constraintTop_toTopOf="@+id/timeStart" />

            <Button
                android:id="@+id/buttonGoReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@drawable/bg_button_add_report"
                android:text="@string/nameReport"
                android:textColor="#E60C4A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>