<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/header"
                android:background="@android:color/holo_blue_light"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <ImageButton
                    android:id="@+id/buttonBack"
                    android:layout_gravity="center"
                    android:background="?selectableItemBackground"
                    android:src="@drawable/ic_keyboard_backspace_black_24dp"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"/>
                <TextView
                    android:id="@+id/tile"
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize"
                    android:gravity="center"
                    android:text="Thông tin hoạt đông"
                    android:textColor="@color/colorWhile"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>


            <TextView
                android:id="@+id/textNameAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameAction"
                android:textSize="@dimen/sp_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/titleDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textNameAction" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginLeft="@dimen/dp_32"
                android:text="@string/textDecription"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/titleStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/titleTimeStart"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/titleEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/timeStartAction"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:text="@string/titleTimeEnd"
                app:layout_constraintEnd_toStartOf="@+id/timeEndAction"
                tools:layout_editor_absoluteY="134dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/titleCreator"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textDescription" />

            <TextView
                android:id="@+id/nameCreator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameCreator"
                android:textColor="@color/colorBack"
                app:layout_constraintStart_toStartOf="@+id/textDescription"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <TextView
                android:id="@+id/timeStartAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeStart"
                android:textColor="@color/colorBack"
                app:layout_constraintStart_toStartOf="@+id/nameCreator"
                app:layout_constraintTop_toTopOf="@+id/titleStart" />

            <TextView
                android:id="@+id/timeEndAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/titleEnd"
                android:text="@string/timeStart"
                android:layout_marginRight="@dimen/dp_16"
                android:textColor="@color/colorBack"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="134dp" />

            <include
                android:id="@+id/include"
                layout="@layout/custom_infor_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintTop_toBottomOf="@id/timeStartAction" />

            <Button
                android:id="@+id/buttonGoActionSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:background="#2196F3"
                android:padding="@dimen/dp_8"
                android:text="Phân Công"
                android:textColor="@color/colorWhile"
                app:layout_constraintEnd_toStartOf="@+id/butonGoActionReport"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include" />

            <Button
                android:id="@+id/butonGoActionReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:padding="@dimen/dp_8"
                android:text="Báo Cáo"
                android:textColor="@color/colorWhile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonGoActionSmall"
                app:layout_constraintTop_toTopOf="@+id/buttonGoActionSmall" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
